--- a/app/src/main/res/layout/activity_admin_and_user.xml
+++ b/app/src/main/res/layout/activity_admin_and_user.xml
@@ -36,6 +36,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/excel_data"
+            android:fontFamily="cursive"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@id/searchView"
             app:layout_constraintBottom_toBottomOf="@id/searchView"
