--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,28 @@
         tools:context=".view.MainActivity">
 
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_logo"
+            android:layout_marginStart="137dp"
+            android:layout_marginTop="348dp"
+            android:fontFamily="cursive"
+            android:text="Arivali"
+            android:textSize="48sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="148dp"
             android:src="@drawable/arivali"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.414"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="32dp"
             android:hint="@string/enter_email"
             android:inputType="textEmailAddress"
