--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Splash">
     <ImageView
         android:id="@+id/idIVLogo"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:layout_margin="25dp"
         android:src="@drawable/arivali" />
@@ -21,5 +20,14 @@
         android:layout_below="@id/idIVLogo"
         android:layout_centerInParent="true"
         android:indeterminateTint="@color/white" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/idIVLogo"
+        android:layout_marginStart="137dp"
+        android:text="Arivali"
+        android:fontFamily="cursive"
+        android:textSize="48sp" />
 
 </RelativeLayout>
