--- a/app/src/main/res/layout/activity_admin_and_user.xml
+++ b/app/src/main/res/layout/activity_admin_and_user.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.AdminActivity">
+
         <ImageView
             android:id="@+id/searchView"
             android:layout_width="50dp"
@@ -21,11 +22,10 @@
             android:layout_marginTop="8dp"
             android:layout_alignParentTop="true"
             tools:ignore="ContentDescription" />
-
         <View
             android:id="@+id/view1"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:background="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,23 +37,118 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/excel_data"
             android:fontFamily="cursive"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@id/searchView"
             app:layout_constraintBottom_toBottomOf="@id/searchView"
             android:textAlignment="center"
             android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toEndOf="@+id/searchView"/>
+            app:layout_constraintStart_toEndOf="@+id/searchView"
+            android:shadowColor="#E7E50C"
+            android:shadowDx="12"
+            android:shadowDy="12"
+            android:shadowRadius="8"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/view1"
+                android:layout_marginBottom="90dp"
+                android:layout_marginTop="5dp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp">
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:typeface="serif"
+                    android:singleLine="true"
+                    android:textAlignment="center"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tv_gender"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="@drawable/edt_back"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:backgroundTint="#949E9D24"
+                    />
+                <TextView
+                    android:id="@+id/tv_gender"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Gender"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:singleLine="true"
+                    android:typeface="serif"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toTopOf="@id/tv_name"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_name"
+                    app:layout_constraintStart_toEndOf="@id/tv_name"
+                    app:layout_constraintEnd_toStartOf="@id/tv_city"
+                    android:layout_marginStart="6dp"
+                    android:backgroundTint="#949E9D24"
+                    android:background="@drawable/edt_back"/>
+
+                <TextView
+                    android:id="@+id/tv_city"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="City"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:singleLine="true"
+                    android:backgroundTint="#949E9D24"
+                    android:typeface="serif"
+                    app:layout_constraintTop_toTopOf="@id/tv_gender"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_gender"
+                    app:layout_constraintStart_toEndOf="@id/tv_gender"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_status"
+                    android:layout_marginStart="6dp"
+                    android:background="@drawable/edt_back"/>
+                <TextView
+                    android:id="@+id/tv_status"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Status"
+                    android:backgroundTint="#949E9D24"
+                    android:textColor="@color/black"
+                    android:singleLine="true"
+                    android:textSize="20sp"
+                    android:typeface="serif"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    app:layout_constraintStart_toEndOf="@+id/tv_city"
+                    app:layout_constraintTop_toTopOf="@id/tv_gender"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_gender"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="6dp"
+                    android:background="@drawable/edt_back"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_excel_data"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="8dp"
-            app:layout_constraintTop_toBottomOf="@id/view1"
+            app:layout_constraintTop_toBottomOf="@id/header"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
 
         <TextView
             android:id="@+id/btn_upload"
