--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:shadowColor="#E7E50C"
+            android:shadowDx="12"
+            android:shadowDy="12"
+            android:shadowRadius="8"/>
 
         <ImageView
             android:id="@+id/img_logo"
@@ -36,7 +40,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <EditText
             android:id="@+id/et_email"
@@ -46,6 +51,7 @@
             android:layout_marginTop="100dp"
             android:layout_marginEnd="32dp"
             android:hint="@string/enter_email"
+            android:typeface="sans"
             android:inputType="textEmailAddress"
             android:paddingStart="8dp"
             android:background="@drawable/edt_back"
@@ -63,6 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_email"
             android:hint="@string/enter_password"
+            android:typeface="sans"
             android:inputType="textPassword"
             android:textColor="@color/black"
             android:background="@drawable/edt_back"
@@ -80,6 +87,7 @@
             android:text="@string/login"
             style="@style/ShapeAppearanceOverlay.Material3.Button"
             android:shadowColor="#9F9706"
+            android:typeface="sans"
             android:layout_marginTop="32dp"
             android:textColor="@color/white"
             android:paddingLeft="32dp"
